--- a/golang/golang.yaml
+++ b/golang/golang.yaml
@@ -3,6 +3,7 @@
   description: Aggregated GoLang syntax sections
 
 - name: array
+  alias: [arr,a]
   syntax: |
     arr := [3]int{1, 2, 3} // define array
     fmt.Println(arr[0])    // access element
